--- a/TPPizza.csproj
+++ b/TPPizza.csproj
@@ -170,6 +170,7 @@
     <Content Include="Views\Pizza\Delete.cshtml" />
     <Content Include="Views\Pizza\Create.cshtml" />
     <Content Include="Views\Shared\PizzaForm.cshtml" />
+    <Content Include="Views\Pizza\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
